k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spot-sdk-mock
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/proxy-buffering: "off"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
spec:
  rules:
    - host: spot-mock.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api-mock
                port: { name: http }
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-mock
                port: { name: http }
